--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ code {
 .game_window {
   background-color: aqua;
   width: 100%;
-  height: 839px;
+  height: 466px;
 }
 
 .hangman {
@@ -44,4 +44,35 @@ code {
   background-color: pink;
   display: flex;
   justify-content: end;
+}
+
+.footer {
+  height: 240px;
+  width: 100%;
+  background-color: yellowgreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.words {
+  height: 200px;
+  width: 650px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.letters {
+  height: 91px;
+  width: 100%;
+  background-color: blanchedalmond;
+}
+
+.guess {
+  height: 40px;
+  width: 624px;
+  background-color: tomato;
 }
